<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/text_view_login_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/activity_login_text_login_prompt" />

    <EditText
        android:id="@+id/text_edit_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_login_text_hint_email"
        android:inputType="text" />

    <EditText
        android:id="@+id/text_edit_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_login_text_hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_button_login" />

    <TextView
        android:id="@+id/text_view_no_account_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/activity_login_text_no_account_prompt" />

    <Button
        android:id="@+id/button_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_button_new_user" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/activity_login_button_exit" />

</LinearLayout>