<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_view_register_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/activity_register_text_register_prompt" />

        <EditText
            android:id="@+id/text_edit_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_register_text_hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/text_edit_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_register_text_hint_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/text_edit_password_repeat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_register_text_hint_password_repeat"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/text_edit_first_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_register_text_hint_first_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/text_edit_last_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_register_text_hint_last_name"
            android:inputType="text" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_register_button_register" />
    </LinearLayout>

</ScrollView>